--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Courier New', sans-serif;
     background-color: #1a1a1a;
     color: #fff;
 }
